// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cell Tests drag and drop cell with no tile matches current snapshot 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
</div>
`;

exports[`cell Tests drag and drop cell with tile matches current snapshot 1`] = `
<div
  role="cell"
>
  <svg
    viewBox="0 0 100 100"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      href="#hex"
    />
  </svg>
  <div
    class="player1 hex tile fly"
    title="Player-1 fly"
  >
    <svg
      viewBox="0 0 100 100"
      xmlns="http://www.w3.org/2000/svg"
    >
      <use
        href="#hex"
      />
      <use
        class="creature"
        href="#fly"
      />
    </svg>
  </div>
</div>
`;
